--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
         <module>cloudalibaba-provider-payment9001</module>
         <module>cloudalibaba-consumer-nacos-order83</module>
         <module>cloudalibaba-config-nacos-client3377</module>
+        <module>cloudalibaba-sentinel-server8401</module>
+        <module>cloudalibaba-provider-payment9003</module>
+        <module>cloudalibaba-consumer-nacos-order84</module>
+        <module>Order-Module</module>
     </modules>
 
     <properties>
