--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>cloudalibaba-provider-payment9003</module>
         <module>cloudalibaba-consumer-nacos-order84</module>
         <module>Order-Module</module>
+        <module>seata-storage-service2002</module>
     </modules>
 
     <properties>
