--- a/seata-storage-service2002/pom.xml
+++ b/seata-storage-service2002/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>io.seata</groupId>
             <artifactId>seata-all</artifactId>
-            <version>1.4.1</version>
+            <version>0.9.0</version>
         </dependency>
         <!-- seata-->
         <!--feign-->
@@ -46,13 +46,10 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.alibaba/druid-spring-boot-starter -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.2.1</version>
         </dependency>
-
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -76,14 +73,8 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
-            <version>5.1.0</version>
-            <scope>compile</scope>
-        </dependency>
     </dependencies>
-    <artifactId>Order-Module</artifactId>
+    <artifactId>seata-storage-service2002</artifactId>
 
 
 </project>
